If the card presents 64bit memory, map it as that. Fixes PR kern/34045.